[tool.poetry]
name = "pathfinders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"
ruff = "^0.2.2"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
color_output = true
pretty = true

[tool.ruff]
fix = true
line-length = 88
extend-select = [
    "E",
    "B",
    "F",
    "W",
    "SIM",
    "TCH",
    "C4",
    "BLE",
    "ERA",
    "I",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "S",
    "RUF",
    "S",
    "T20",
    "TID",
    "YTT",
]
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-ignore = ["E203", "E501", "S101", "B008", "BLE001","T201","S311"]
show-fixes = true
